# libaesni

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_encrypt_block.cpp
include/libaesni/: aesni.h
src/: aesni.s
test/: CMakeLists.txt  include_test.c  test_decrypt_block.cpp  test_encrypt_block.cpp  test_encrypt_decrypt_block.cpp  test_key_expansion.cpp
